tests/parse_print/random_perturb/set01/change-02/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-02/change-02.essence line 1, column 19:
unexpected T
    line 1, column 19
    language Essence 1.T
                   ^^^^^^^